--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,9 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mydatabase
     username: root
-    password: admin1234
+    password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
