--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,15 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' //Swagger
 
 }
-
+processResources.dependsOn('copyGitSubmodule')
+tasks.register('copyGitSubmodule', Copy) {
+	doFirst {
+		mkdir 'src/main/resources'
+	}
+	from '../config/user-service-module'
+	include '*.yml'
+	into 'src/main/resources'
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
