--- a/build.gradle
+++ b/build.gradle
@@ -63,8 +63,13 @@ tasks.register('copyGitSubmodule', Copy) {
 		mkdir 'src/main/resources'
 	}
 	from 'config/benepick'
-	include '*.yml'
+	include '*.yml', 'keystore.p12'
 	into 'src/main/resources'
+
+	// Only run this task if the env is not 'prod'
+	onlyIf {
+		!project.hasProperty('env') || !project.env.equals('prod')
+	}
 }
 
 tasks.named('test') {
