--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 	// spring actuator
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'io.micrometer:micrometer-registry-prometheus'
+	// Spring Boot validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 }
 
