--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,8 @@ dependencies {
 	// spring actuator
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'io.micrometer:micrometer-registry-prometheus'
-
+	// validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 println "Current environment: ${project.hasProperty('env') ? project.env : 'not set'}"
