--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 	implementation 'io.micrometer:micrometer-registry-prometheus'
 	// validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	// cache
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 }
 
 println "Current environment: ${project.hasProperty('env') ? project.env : 'not set'}"
