Api 318 [REFACTOR ] 사원 유효성 검사 추가 (#107)
* Feat: valiation

* Feat: 사원 도메인 유효성 검사 추가

* Feat:controller에 valid 어노테이션 추가

* Feat: message 수정

* Feat: 사원등록시 포인트 min값 지정

* Feat: 유효성 검사 추가

* Feat: 유효성 검사 추가

* Feat: customexceptionhandler 적용

* Feat: customexceptionhandler 적용

* feat:enum validation

* feat:코멘트 반영

---------

Co-authored-by: wooing1084 <kmjung1515@naver.com>

--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,10 @@ dependencies {
 	// spring actuator
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'io.micrometer:micrometer-registry-prometheus'
-	// validation
+	// Spring Boot validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework:spring-web'
+
 }
 
 println "Current environment: ${project.hasProperty('env') ? project.env : 'not set'}"
