--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 	implementation 'io.micrometer:micrometer-registry-prometheus'
 	// Spring Boot validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	// cache
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework:spring-web'
 
 }
